[package]
name = "p-0190cd64-0a5b-7920-b051-f69269014b7b"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = { version = "*", default-features = true }
color-eyre = { version = "*", default-features = true }
criterion = { version = "*", features = [
  "csv_output",
  "html_reports",
  "async_tokio",
] }
fjall = { version = "*", features = ["all"] }
redb = { version = "*", default-features = true }
tokio = { version = "*", features = ["full"] }
uuid = { version = "*", features = ["v7"] }

[[bench]]
name = "redb_benchmark"
harness = false

[[bench]]
name = "fjall_benchmark"
harness = false
